# challenge-repo

./: .pre-commit-config.yaml  README.md
.github/workflows/: pytest.yml
antivirus/BODMAS/: .gitignore  README.md  bodmas_malware_models_Neural Network_20250916_151423.joblib  bodmas_malware_models_XGBoost_20250916_151423.joblib  bodmas_malware_models_metadata_20250916_151423.json  (+6 more)
evasion/: .dockerignore  .env.example  .gitignore  ANALYSIS_FLAWS.md  Dockerfile  Makefile  README.md  RUST_CRYPTER_INTEGRATION.md  TECHNICAL.md  TODO.md  USAGE.md  main.py  pytest.ini  requirements.txt  setup_rust_crypter.py  test-requirements.txt
evasion/rust-dropper/: .gitignore  Cargo.toml  Makefile  README.md
evasion/rust-dropper/src/: build_droppers.rs  lib.rs  main.rs  obfuscation_pipeline.rs
evasion/src/: __init__.py  __main__.py  batch_obfuscate.py  pyproject.toml
evasion/src/obfuscation_agent/: __init__.py  actions.py  agent.py  evasion_model.py  obfuscation_tools.py  state_manager.py
evasion/src/rt_evade/: __init__.py
evasion/src/rt_evade/core/: __init__.py  constants.py  guards.py  pipeline.py  transform.py
evasion/src/rt_evade/dropper/: __init__.py  cli.py  embed.py  runtime_decode.py  rust_crypter.py  standalone.py
evasion/src/rt_evade/obfuscation/: __init__.py  base64_strings.py  xor_packer.py
evasion/src/rt_evade/pe/: README.md  __init__.py  compression.py  detection_mitigation.py  encryption.py  import_manipulator.py  mimicry.py  obfuscator.py  packer.py  reader.py  section_manipulation.py  static_evasion.py  string_obfuscation.py  validator.py  writer.py
(+50 files in other folders)
