[package]
name = "rusty-sheller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rusty-sheller"
path = "src/main.rs"

[[bin]]
name = "build-droppers"
path = "src/build_droppers.rs"

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader"] }
winres = "0.1"
rand = "0.8"

[build-dependencies]
winres = "0.1"
